@@ -1,3 +1,10 @@
+2009-11-23  Jian Li  <jianli@chromium.org>
+
+        Reviewed by NOBODY (Chromium build fix).
+
+        * src/GraphicsContext3D.cpp:
+        (WebCore::GraphicsContext3D::createShader):
+
 2009-11-20  Jian Li  <jianli@chromium.org>
 
         Not reviewed. Fix chromium build.
